ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__CnPRecurringTransaction__c/CnP_PaaS__CnPRecurringTransaction__c.object-meta.xml
<CustomObject>
    <label>C&amp;P RecurringTransaction</label>
    <nameField>
        <label>RecurringTransaction Id</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>C&amp;P RecurringTransactions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>