ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__CnPRecurringTransaction__c/fields/CnP_PaaS__InstallmentNumber__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__InstallmentNumber__c</fullName>
    <label>InstallmentNumber</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>