ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__CnPRecurringTransaction__c/fields/CnP_PaaS__Recurring_Transaction__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__Recurring_Transaction__c</fullName>
    <label>Recurring Transaction</label>
    <referenceTo>CnP_PaaS__CnPRecurring__c</referenceTo>
    <relationshipName>RecurringTransactions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>