ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__CnPRecurringTransaction__c/fields/CnP_PaaS__TransactionId__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__TransactionId__c</fullName>
    <label>TranactionId</label>
    <referenceTo>CnP_PaaS__CnP_Transaction__c</referenceTo>
    <relationshipName>RecurringTransactions</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>